--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -121,6 +121,15 @@ and
 .B
 sboupgrade(1)\fR\
 \&: blacklist, optional dependencies and automatic reverse dependency rebuilds.
+.P
+Those who wish to use
+.B
+sbotools
+for testing scripts and reverse dependencies in a clean build environment may be
+interested in the
+.B
+sbotest
+companion package.
 .SH STARTUP
 When using
 .B
