--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Readme 3"
-.TH SBO::Lib::Readme 3 "Setting Orange, Discord 57, 3191 YOLD" "" "sbotools 3.6"
+.TH SBO::Lib::Readme 3 "Prickle-Prickle, Confusion 33, 3191 YOLD" "" "sbotools 3.6"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -158,10 +158,11 @@ have yet to look into the question closely.
 .IX Header "EXIT CODES"
 Readme.pm subroutines can return the following exit codes:
 .PP
-.Vb 3
+.Vb 4
 \&  _ERR_USAGE         1   usage errors
 \&  _ERR_SCRIPT        2   script or module bug
 \&  _ERR_OPENFH        6   failure to open file handles
+\&  _ERR_STDIN         16  reading keyboard input failed
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
