--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib 3"
-.TH SBO::Lib 3 "Setting Orange, Discord 57, 3191 YOLD" "" "sbotools 3.6"
+.TH SBO::Lib 3 "Prickle-Prickle, Confusion 33, 3191 YOLD" "" "sbotools 3.6"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -123,6 +123,7 @@ The sbotools share the following exit codes:
 \&  _ERR_CIRCULAR      13  attempted to calculate a circular dependency
 \&  _ERR_USR_GRP       14  a required user or group is missing
 \&  _ERR_GPG           15  GPG verification failed
+\&  _ERR_STDIN         16  reading keyboard input failed
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
