sbofind: Callable with sbotest.

--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -143,6 +143,14 @@ Show help information.
 .RS
 Show version information.
 .RE
+.SH SBOTEST
+.B
+sbofind
+is called when running
+.B
+sbotest find\fR\
+\&; flags are unchanged. Scripts with an up-to-date package in the
+archive are indicated.
 .SH EXIT CODES
 .P
 .B
