--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -1,4 +1,4 @@
-.TH sbohints 1 "Setting Orange, Discord 57, 3191 YOLD" "sbotools 3.6" sbotools
+.TH sbohints 1 "Setting Orange, Confusion 39, 3191 YOLD" "sbotools 3.7" sbotools
 .SH NAME
 .P
 .B
