--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -574,7 +574,10 @@ ARCH
 to build
 .I
 compat32
-packages. This process is not necessarily bug-free;
+packages, instead using
+.B
+setarch(1)\fR\
+\&. This process is not necessarily bug-free;
 please do not hesitate to report
 .I
 compat32
@@ -796,7 +799,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sbotools.conf(5), sbotools.hints(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sbotools.conf(5), sbotools.hints(5), setarch(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
