man*: Add "See Also" for outside programs.

--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -118,7 +118,7 @@ simultaneously.
 sboupgrade
 verifies the local repository with
 .B
-gpg
+gpg(1)
 if
 .B
 GPG_VERIFY
@@ -799,7 +799,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sbotools.conf(5), sbotools.hints(5), setarch(1)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sbotools.conf(5), sbotools.hints(5), gpg(1), setarch(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
