--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -106,7 +106,7 @@ option.
 sbocheck
 performs
 .B
-gpg
+gpg(1)
 verification upon pulling the tree if
 .B
 GPG_VERIFY
@@ -177,7 +177,7 @@ sbotools.conf(5)\fR\
 .RS
 Use
 .B
-gpg
+gpg(1)
 to verify the fetched repository, even if
 .B
 GPG_VERIFY
@@ -198,7 +198,7 @@ If running Slackware -current, download a copy of the obsolete script list
 from
 .UR https://pghvlaans.github.io/sbotools
 .UE
-and verify with gpg if
+and verify with gpg(1) if
 .B
 GPG_VERIFY
 is
@@ -270,7 +270,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5), gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
