--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -241,7 +241,7 @@ GPG_VERIFY\fR\
 TRUE\fR\
 \&, use
 .B
-gpg
+gpg(1)
 to verify the contents of the local repository (and, if applicable,
 .I
 /etc/sbotools/obsolete\fR\
@@ -582,7 +582,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sbocheck(1), sboclean(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5), gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
