--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -104,7 +104,7 @@ If
 TRUE\fR\
 \&, use
 .B
-gpg
+gpg(1)
 to verify the contents of the local repository (and, if applicable,
 .I
 /etc/sbotools/obsolete\fR\
@@ -381,7 +381,7 @@ effect on scripts in the local overrides directory.
 .RE
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.hints(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.hints(5), gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
