--- a/man3/SBO::Lib::Info.3
+++ b/man3/SBO::Lib::Info.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Prickle-Prickle, Confusion 43, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Info 3 "Boomtime, Confusion 46, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -81,7 +81,15 @@ SBO::Lib::Info \- Utilities to get data from SBo info files.
 .Ve
 .PP
 \&\f(CWcheck_x32()\fR returns a true value if the SlackBuild in \f(CW$location\fR considers
-64\-bit builds \f(CW\*(C`UNTESTED\*(C'\fR or \f(CW\*(C`UNSUPPORTED\*(C'\fR. Otherwise, it returns a false value.
+64\-bit builds \f(CW\*(C`UNTESTED\*(C'\fR or \f(CW\*(C`UNSUPPORTED\*(C'\fR and false otherwise.
+.SS check_x64
+.IX Subsection "check_x64"
+.Vb 1
+\&  my $bool = check_x64($location);
+.Ve
+.PP
+\&\f(CWcheck_x64()\fR returns a true value if the SlackBuild in \f(CW$location\fR considers
+32\-bit builds \f(CW\*(C`UNTESTED\*(C'\fR or \f(CW\*(C`UNSUPPORTED\*(C'\fR and false otherwise.
 .SS get_download_info
 .IX Subsection "get_download_info"
 .Vb 2
