--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -326,7 +326,9 @@ Do not reuse saved build options if running with
 Create a
 .I
 compat32
-package on multilib x86_64 systems.
+package on multilib x86_64 systems. Any requested 64-bit only
+scripts are not queued, and 32-bit only scripts are built as-is.
+.P
 This requires the
 .B
 compat32-tools
