Add setting NOWRAP.

--- a/THANKS
+++ b/THANKS
@@ -61,6 +61,7 @@ penduin (reported a Slackware -current version bug)
 qunying (requested build number upgrade notification)
 Sammyboy (reported a kernel version number bug)
 STDOUBT (reported a version parse bug)
+shamefulCake1 (requested NOWRAP)
 travis-82 (requested tree download progress output)
 tuxuser1 (reported the overwritten source file bug)
 wgreenhouse (reported the local git repo chown bug)
