--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -379,6 +379,17 @@ TRUE\fR\
 version or build number is greater. This has no
 effect on scripts in the local overrides directory.
 .RE
+.P
+.B
+NOWRAP=(FALSE|TRUE)
+.RS
+If set to
+.B
+TRUE\fR\
+\&, do not wrap
+.B
+sbotools
+output.
 .SH SEE ALSO
 .P
 sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.hints(5), gpg(1)
