Add NOCOLOR and color output.

--- a/THANKS
+++ b/THANKS
@@ -60,6 +60,7 @@ na3i09 (reported a compat32 sboremove bug)
 penduin (reported a Slackware -current version bug)
 qunying (requested build number upgrade notification)
 Sammyboy (reported a kernel version number bug)
+SCevorec (suggested color command line options)
 STDOUBT (reported a version parse bug)
 shamefulCake1 (requested NOWRAP)
 travis-82 (requested tree download progress output)
