--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -13,6 +13,8 @@ sbohints [-l|--reset]
 sbohints [-c] [-Obor] sbo_name (sbo_name)
 .P
 sbohints [-q] sbo_name (sbo_name)
+.P
+sbohints [--color|--nocolor] ...
 .SH DESCRIPTION
 .P
 .B
@@ -214,6 +216,27 @@ Show help information.
 .RS
 Show version information.
 .RE
+.P
+.B
+--color
+.RS
+Turn on
+.B
+sbotools
+color output. See also
+.B
+sbotools.colors(5)\fR\
+\&.
+.RE
+.P
+.B
+--nocolor
+.RS
+Turn off
+.B
+sbotools
+color output.
+.RE
 .SH SBOTEST
 .B
 sbohints
@@ -250,7 +273,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
