--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Pungenday, Confusion 52, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Util 3 "Prickle-Prickle, Confusion 53, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -75,6 +75,16 @@ SBO::Lib::Util \- Utility functions for SBO::Lib and the sbotools
 .Ve
 .SH VARIABLES
 .IX Header "VARIABLES"
+.ie n .SS "($color_default, $color_lesser, $color_notice, $color_warn)"
+.el .SS "($color_default, \f(CW$color_lesser\fP, \f(CW$color_notice\fP, \f(CW$color_warn\fP)"
+.IX Subsection "($color_default, $color_lesser, $color_notice, $color_warn)"
+These variables are ANSI colors. \f(CW$color_notice\fR is \f(CW\*(C`cyan\*(C'\fR for selected
+\&\f(CW\*(C`sbotools\*(C'\fR informative messages. \f(CW$color_lesser\fR is \f(CW\*(C`bold\*(C'\fR for warnings
+of lesser concern. \f(CW$color_warn\fR, \f(CW\*(C`red bold\*(C'\fR, is for errors and warnings of greater concern.
+\&\f(CW\*(C`sbotools\*(C'\fR color display can be disabled by setting \f(CW\*(C`NOCOLOR\*(C'\fR to \f(CW\*(C`TRUE\*(C'\fR. \f(CW$color_default\fR
+is currently \f(CW\*(C`reset\*(C'\fR and is not configurable.
+.PP
+\&\f(CWget_colors()\fR reads \f(CW\*(C`/etc/sbotools/sbotools.colors\*(C'\fR for custom values.
 .ie n .SS $conf_dir
 .el .SS \f(CW$conf_dir\fP
 .IX Subsection "$conf_dir"
@@ -94,7 +104,7 @@ they change according to the configuration. \f(CW\*(C`SBO_HOME\*(C'\fR is change
 The supported keys are: \f(CW\*(C`NOCLEAN\*(C'\fR, \f(CW\*(C`DISTCLEAN\*(C'\fR, \f(CW\*(C`JOBS\*(C'\fR, \f(CW\*(C`PKG_DIR\*(C'\fR,
 \&\f(CW\*(C`SBO_HOME\*(C'\fR, \f(CW\*(C`LOCAL_OVERRIDES\*(C'\fR, \f(CW\*(C`SLACKWARE_VERSION\*(C'\fR, \f(CW\*(C`REPO\*(C'\fR, \f(CW\*(C`BUILD_IGNORE\*(C'\fR,
 \&\f(CW\*(C`GPG_VERIFY\*(C'\fR, \f(CW\*(C`RSYNC_DEFAULT\*(C'\fR, \f(CW\*(C`STRICT_UPGRADES\*(C'\fR, \f(CW\*(C`GIT_BRANCH\*(C'\fR, \f(CW\*(C`CLASSIC\*(C'\fR,
-\&\f(CW\*(C`CPAN_IGNORE\*(C'\fR, \f(CW\*(C`ETC_PROFILE\*(C'\fR, \f(CW\*(C`LOG_DIR\*(C'\fR and \f(CW\*(C`NOWRAP\*(C'\fR.
+\&\f(CW\*(C`CPAN_IGNORE\*(C'\fR, \f(CW\*(C`ETC_PROFILE\*(C'\fR, \f(CW\*(C`LOG_DIR\*(C'\fR, \f(CW\*(C`NOWRAP\*(C'\fR and \f(CW\*(C`NOCOLOR\*(C'\fR.
 .ie n .SS $download_time
 .el .SS \f(CW$download_time\fP
 .IX Subsection "$download_time"
@@ -211,6 +221,16 @@ value.
 \&\f(CWget_arch()\fR returns the machine architechture as reported by \f(CW\*(C`uname
 \&\-m\*(C'\fR. For the \f(CW\*(C`x86_64\*(C'\fR architecture, additionally check whether \f(CW\*(C`/bin/bash\*(C'\fR
 is 64\- or 32\-bit to account for 32\-bit userlands running on a 64\-bit kernel.
+.SS get_colors
+.IX Subsection "get_colors"
+.Vb 1
+\&  my ($color_notice, $color_lesser, $color_warn) = get_colors();
+.Ve
+.PP
+\&\f(CWget_colors()\fR reads the contents of \f(CW\*(C`/etc/sbotools/sbotools.colors\*(C'\fR to
+set custom values for \f(CW$color_notice\fR, \f(CW$color_lesser\fR and \f(CW$color_warn\fR.
+No color can be set to an invalid ANSI specification; in such cases, the default
+value is used instead. See \f(CWTerm::ANSIColor(3)\fR for details.
 .SS get_kernel_version
 .IX Subsection "get_kernel_version"
 .Vb 1
@@ -347,6 +367,22 @@ is non\-zero, it returns an error message rather than a file handle.
 .PP
 It returns two values: the file handle and the exit status. If the exit status
 is non\-zero, it returns an error message rather than a file handle.
+.SS print_color
+.IX Subsection "print_color"
+.Vb 1
+\&  print_color "red bold";
+.Ve
+.PP
+\&\f(CWprint_color()\fR takes one or more ANSI colors and prints, provided that the
+\&\f(CW\*(C`NOCOLOR\*(C'\fR setting is \f(CW\*(C`FALSE\*(C'\fR. See the \f(CW\*(C`Function Interface\*(C'\fR section in
+\&\f(CWTerm::ANSIColor(3)\fR for a list of available colors.
+.PP
+Using colors \f(CW\*(C`black\*(C'\fR through \f(CW\*(C`bright_white\*(C'\fR, \f(CW\*(C`bold\*(C'\fR and \f(CW\*(C`reset\*(C'\fR only is
+advisable to ensure terminal compatibility. When calling \f(CWprint_color()\fR before
+exiting, ensure that a new line follows to avoid an improper cursor on some
+terminals.
+.PP
+There is no useful return value.
 .SS print_failures
 .IX Subsection "print_failures"
 .Vb 1
@@ -360,7 +396,7 @@ There is no useful return value.
 .SS prompt
 .IX Subsection "prompt"
 .Vb 1
-\&  exit unless prompt "Should we continue?", default => "yes";
+\&  exit unless prompt $color_notice, "Should we continue?", default => "yes";
 .Ve
 .PP
 \&\f(CWprompt()\fR prompts the user for an answer, optionally specifying a default of
@@ -379,8 +415,8 @@ Output is wrapped at 72 characters.
 \&\f(CWread_config()\fR reads in the configuration settings from
 \&\f(CW\*(C`/etc/sbotools/sbotools.conf\*(C'\fR, updating the \f(CW%config\fR hash. If
 \&\f(CW\*(C`SBO_HOME\*(C'\fR is \f(CW\*(C`FALSE\*(C'\fR, it changes to \f(CW\*(C`/usr/sbo\*(C'\fR.
-Additionally, \f(CW\*(C`BUILD_IGNORE\*(C'\fR and \f(CW\*(C`RSYNC_DEFAULT\*(C'\fR are turned on if
-\&\f(CW\*(C`CLASSIC\*(C'\fR is \f(CW\*(C`TRUE\*(C'\fR.
+Additionally, \f(CW\*(C`BUILD_IGNORE\*(C'\fR, \f(CW\*(C`RSYNC_DEFAULT\*(C'\fR and \f(CW\*(C`NOCOLOR\*(C'\fR
+are turned on if \f(CW\*(C`CLASSIC\*(C'\fR is \f(CW\*(C`TRUE\*(C'\fR.
 .PP
 When \f(CW\*(C`sbotest\*(C'\fR is running, the default value of \f(CW\*(C`SBO_HOME\*(C'\fR
 is \f(CW\*(C`/usr/sbotest\*(C'\fR, and \f(CW\*(C`ETC_PROFILE\*(C'\fR and \f(CW\*(C`CPAN_IGNORE\*(C'\fR default
@@ -494,6 +530,15 @@ error codes, use \f(CWerror_code()\fR.
 \&\f(CWversion_cmp()\fR compares \f(CW$ver1\fR with \f(CW$ver2\fR. It returns 1 if \f(CW$ver1\fR is higher,
 \&\-1 if \f(CW$ver2\fR is higher and 0 if they are equal. It strips the running kernel version,
 as well as any locale information that may have been appended to the version strings.
+.SS warn_color
+.IX Subsection "warn_color"
+.Vb 1
+\&  warn_color($color, $msg);
+.Ve
+.PP
+\&\f(CWwarn_color()\fR emits a warning in the chosen color and resets the color
+afterwards. No colors are used if \f(CW\*(C`NOCOLOR\*(C'\fR is \f(CW\*(C`TRUE\*(C'\fR. A newline is added
+automatically after the message. There is no useful return value.
 .SS wrapsay
 .IX Subsection "wrapsay"
 .Vb 1
@@ -508,6 +553,16 @@ Use this subroutine whenever it is either obvious that the output exceeds
 80 characters or the output includes a variable. \f(CW\*(C`say\*(C'\fR can be used in
 other cases. \f(CWwrapsay()\fR should not be used on output that can be piped
 for use in scripts (e.g., queue reports from \f(CWsbofind(1)\fR).
+.SS wrapsay_color
+.IX Subsection "wrapsay_color"
+.Vb 1
+\&  wrapsay_color($color, $msg, $trail);
+.Ve
+.PP
+\&\f(CWwrapsay_color()\fR takes a color, a message and any true value if a trailing line
+is required. It applies a color, runs the message through \f(CWwrapsay()\fR and
+resets the color afterwards. No colors are used if \f(CW\*(C`NOCOLOR\*(C'\fR is \f(CW\*(C`TRUE\*(C'\fR. There
+is no useful return value.
 .SH "EXIT CODES"
 .IX Header "EXIT CODES"
 The sbotools share the following exit codes:
@@ -532,7 +587,7 @@ The sbotools share the following exit codes:
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
-\&\fBSBO::Lib\fR\|(3), \fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Readme\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3)
+\&\fBSBO::Lib\fR\|(3), \fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Readme\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBTerm::ANSIColor\fR\|(3)
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
