--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -12,6 +12,8 @@ tree and check for updates
 sbocheck [-h|-v]
 .P
 sbocheck [-Ogn]
+.P
+sbocheck [--color|--nocolor] ...
 .SH DESCRIPTION
 .P
 .B
@@ -235,6 +237,27 @@ Show help information.
 .RS
 Show version information.
 .RE
+.P
+.B
+--color
+.RS
+Turn on
+.B
+sbotools
+color output. See also
+.B
+sbotools.colors(5)\fR\
+\&.
+.RE
+.P
+.B
+--nocolor
+.RS
+Turn off
+.B
+sbotools
+color output.
+.RE
 .SH EXIT CODES
 .P
 .B
@@ -270,7 +293,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5), gpg(1)
+sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
