--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -11,6 +11,8 @@ sbotools
 sboclean [-h|-v]
 .P
 sboclean [-dwi] [-o ALL|package]
+.P
+sboclean [--color|--nocolor] ...
 .SH DESCRIPTION
 .P
 .B
@@ -137,6 +139,27 @@ Show help information.
 .RS
 Show version information.
 .RE
+.P
+.B
+--color
+.RS
+Turn on
+.B
+sbotools
+color output. See also
+.B
+sbotools.colors(5)\fR\
+\&.
+.RE
+.P
+.B
+--nocolor
+.RS
+Turn off
+.B
+sbotools
+color output.
+.RE
 .SH EXIT CODES
 .P
 .B
@@ -166,7 +189,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sbocheck(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
