--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -15,7 +15,7 @@ sboconfig [-l|-n]
 .P
 sboconfig [--reset]
 .P
-sboconfig [-CPORScbdegw TRUE|FALSE] [-j #|FALSE] [-Lpo /path|FALSE] \\
+sboconfig [-CKPORScbdegw TRUE|FALSE] [-j #|FALSE] [-Lpo /path|FALSE] \\
           [-s /path|/usr/sbo] [-B branch_name|FALSE] [-V #.#|FALSE] \\
           [-r url|FALSE]
 .SH DESCRIPTION
@@ -151,10 +151,13 @@ CLASSIC\fR\
 TRUE\fR\
 \&, automatically enable
 .B
-RSYNC_DEFAULT
-and
+RSYNC_DEFAULT\fR\
+\&,
 .B
 BUILD_IGNORE
+and
+.B
+NOCOLOR
 (overriding the contents of
 .B
 sbotools.conf(5)\fR\
@@ -276,6 +279,26 @@ argument when a SlackBuild invoking
 .B
 make
 is run.
+.RE
+.P
+.B
+-K|--nocolor (FALSE|TRUE)
+.RS
+.B
+NOCOLOR\fR\
+\&: If
+.B
+TRUE\fR\
+\&, disable all
+.B
+sbotools
+color output. To customize color output, edit the
+.I
+/etc/sbotools/sbotools.colors
+file directly. See
+.B
+sbotools.colors(5)
+for details.
 .RE
 .P
 .B
@@ -596,7 +619,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5), gpg(1)
+sbocheck(1), sboclean(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
