--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -20,6 +20,8 @@ sboinstall [-dce TRUE|FALSE] [-j #|FALSE] [-Lk /path|FALSE] \\
 .P
 sboinstall [-dce TRUE|FALSE] [-j #|FALSE] [-Lk /path|FALSE] \\
            [-Dioqr] [--create-template FILE] --series-rebuild SERIES
+.P
+sboinstall [--color|--nocolor] ...
 .SH DESCRIPTION
 .P
 .B
@@ -667,6 +669,27 @@ Show help information.
 .RS
 Show version information.
 .RE
+.P
+.B
+--color
+.RS
+Turn on
+.B
+sbotools
+color output. See also
+.B
+sbotools.colors(5)\fR\
+\&.
+.RE
+.P
+.B
+--nocolor
+.RS
+Turn off
+.B
+sbotools
+color output.
+.RE
 .SH VARIABLES
 .P
 Beyond the options contained in
@@ -927,7 +950,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboremove(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5), gpg(1), setarch(1)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1), setarch(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
