--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -9,6 +9,8 @@ sboremove
 sboremove [-h|-v]
 .P
 sboremove [-ap] sbo_name (sbo_name)
+.P
+sboremove [--color|--nocolor] ...
 .SH DESCRIPTION
 .P
 .B
@@ -97,6 +99,27 @@ Show help information.
 .RS
 Show version information.
 .RE
+.P
+.B
+--color
+.RS
+Turn on
+.B
+sbotools
+color output. See also
+.B
+sbotools.colors(5)\fR\
+\&.
+.RE
+.P
+.B
+--nocolor
+.RS
+Turn off
+.B
+sbotools
+color output.
+.RE
 .SH EXIT CODES
 .P
 .B
@@ -129,7 +152,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5)
 .SH AUTHORS
 .P
 Luke Williams <xocel@iquidus.org>
