--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -86,7 +86,7 @@ SBOTOOLS_CONF_DIR
 with an absolute path.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.conf(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
