Package installation time reporting.

--- a/THANKS
+++ b/THANKS
@@ -62,7 +62,7 @@ qunying (requested build number upgrade notification)
 Sammyboy (reported a kernel version number bug)
 SCevorec (suggested color command line options)
 STDOUBT (reported a version parse bug)
-shamefulCake1 (requested NOWRAP)
+shamefulCake1 (requested NOWRAP and installation time reporting)
 travis-82 (requested tree download progress output)
 tuxuser1 (reported the overwritten source file bug)
 wgreenhouse (reported the local git repo chown bug)
