More comprehensive directory blocking.

--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -49,6 +49,19 @@ To use a configuration directory other than
 SBOTOOLS_CONF_DIR
 with an absolute path.
 .P
+.I
+/root\fR\
+\&,
+.I
+/home\fR\
+\&,
+.I
+/
+and possible top-level directories under
+.I
+/home
+are not permitted as directory settings.
+.P
 Non-root users can only call
 .B
 sboconfig
