--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -39,6 +39,19 @@ To use a configuration directory other than
 SBOTOOLS_CONF_DIR
 with an absolute path.
 .P
+.I
+/root\fR\
+\&,
+.I
+/home\fR\
+\&,
+.I
+/
+and possible top-level directories under
+.I
+/home
+are not permitted as directory settings.
+.P
 The current configuration keys are as follows:
 .P
 .B
